Add Gradient To the page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-linear-gradient": "react-native-community/react-native-linear-gradient",
     "react-navigation": "^1.1.2",
     "uuid": "^3.2.1"
   },
